// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkAnchorStyled renders correctly with defined theme 1`] = `
.c0 {
  text-decoration: none;
  font-size: 14px;
  color: yellow;
}

<a
  className="c0"
  href="http://wizeline.com/"
>
  hello
</a>
`;

exports[`LinkAnchorStyled renders correctly with undefined theme 1`] = `
.c0 {
  text-decoration: none;
  font-size: 14px;
}

<a
  className="c0"
  href="http://wizeline.com/"
>
  hello
</a>
`;
